# bamf

./: .bzrignore  .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.am.coverage  Makefile.am.marshal  Makefile.in  TODO  WnckSyncDaemon.sln  aclocal.m4  autogen.sh  build.rules.mk  config.h.in  configure  configure.ac  configure.in  gio.patch  libgnome-desktop.patch
CWnckSyncDaemon/: main.c  main.h  windowmatcher.c  windowmatcher.h  wncksyncdbus-glue.h  wncksyncdbus-glue.xml  wncksyncdbus.c  wncksyncdbus.h
WindowSwitcher/: Makefile.am  WindowSwitcher.sln
WindowSwitcher/LibWnckSync/: AssemblyInfo.cs  Global.cs  LibWnckSync.csproj  Makefile.am
WindowSwitcher/WindowSwitcher/: CairoContext_Extensions.cs  GtkWidget_Extensions.cs  Makefile.am  SwitcherArea.cs  WindowSwitcher.cs  WindowSwitcher.csproj  WindowSwitcher.exe.config.in  XKeybinder.cs  window-switcher.in
WindowSwitcher/libwsbind/: Makefile.am  keybinder.c  keybinder.h
WnckSyncDaemon/: Makefile.am  WnckSyncDaemon.cproj  WnckSyncDaemon.csproj  main.c  windowmatcher.c  wncksyncdaemon.in  wncksyncdbus.h
WnckSyncDaemon/src/WnckSyncDaemon/: Control.cs  IControl.cs  WindowMatcher.cs  WnckSyncDaemon.cs
data/: Makefile.am  Makefile.in  bamfdaemon-dbus-runner.in  bamfdaemon.conf.in  bamfdaemon.service.in  org.ayatana.bamf.service.in  org.wncksync.Matcher.service.in
debian/: bamfdaemon.install  bamfdaemon.postinst  bamfdaemon.postrm  changelog  control  copyright  copyright.in  gbp.conf  gir1.2-bamf-0.2.install  gir1.2-bamf-3.install  libbamf-dev.install  libbamf0.install  libbamf0.symbols  libbamf3-0.symbols  libbamf3-1.symbols  libbamf3-2.install  libbamf3-2.symbols  libbamf3-3.symbols  libbamf3-dev.install  rules  watch
debian/patches/: 0001_allow-colon-separated-values-in-XDG-CURRENT-DESKTOP.patch  1001_autotools-pkg-config-macro-not-cross-compilation-safe.patch  1004_py2to3_gtester2xunit.patch  2001_build-using-mate-common.patch  2002_use-dbus-run-session-instead-of-dbus-launch.patch  2003_allow-gtk3-deprecated-symbols.patch  series  webapps.patch
doc/: Makefile.in
doc/reference/: Makefile.in
doc/reference/libbamf/: Makefile.am  Makefile.in  libbamf-docs.sgml  libbamf-sections.txt  libbamf.types
doc/reference/libbamf/html/: BamfApplication.html  BamfControl.html  BamfFactory.html  BamfMatcher.html  BamfTabSource.html  BamfView.html  BamfWindow.html  annotation-glossary.html  api-index-full.html  ch01.html  index.html  index.sgml  libbamf.devhelp  libbamf.devhelp2  object-tree.html
doc/reference/libbamf/tmpl/: bamf-application-private.sgml  bamf-application.sgml  bamf-control.sgml  bamf-factory.sgml  bamf-indicator.sgml  bamf-matcher.sgml  bamf-tab-source.sgml  bamf-tab.sgml  bamf-view-private.sgml  bamf-view.sgml  bamf-window.sgml  libbamf-unused.sgml  libbamf.sgml
examples/: Makefile.am  alt-tabber.c  desktop-file-launcher.c
lib/libbamf/: Bamf-0.2.gir  Bamf-3.metadata  Makefile.am  Makefile.am.notparallel  Makefile.in  bamf-application-private.h  bamf-application.c  bamf-application.h  bamf-control.c  bamf-control.h  bamf-factory.c  bamf-factory.h  bamf-indicator.c  bamf-indicator.h  bamf-marshal.c  bamf-marshal.h  bamf-marshal.list  bamf-matcher.c  bamf-matcher.h  bamf-proxy.c  bamf-proxy.h  bamf-tab-source-glue.h  bamf-tab-source-glue.xml  bamf-tab-source.c  bamf-tab-source.h  bamf-tab.c  bamf-tab.h  bamf-view-private.h  bamf-view.c  bamf-view.h  bamf-window.c  bamf-window.h  libbamf.c  libbamf.h  libbamf.pc.in  libbamf3.pc.in  marshal.c  marshal.h  org.ayatana.bamf.tabsource.xml
lib/libbamf-private/: Makefile.am  bamf-private.h  org.ayatana.bamf.browser.xml  org.ayatana.bamf.view.xml  org.ayatana.bamf.xml
lib/libwncksync/: Makefile.am  libwncksync.c  libwncksync.h  libwncksync.pc.in
libwncksync/: libwncksync.c  libwncksync.cproj  libwncksync.h  libwncksync.md.pc  main.c  main.h
m4/: gcov.m4  mono.m4
module/: Makefile.am  Makefile.in  dbus-module.c  gapplaunchhandlerdbus.c  gapplaunchhandlerdbus.h
plugins/chromium/: manifest.json
plugins/chromium/plugin/: npbamf.c
src/: Makefile.am  Makefile.in  bamf-application-glue.h  bamf-application-glue.xml  bamf-application.c  bamf-application.h  bamf-control-glue.h  bamf-control-glue.xml  bamf-control.c  bamf-control.h  bamf-daemon.c  bamf-daemon.h  bamf-gdbus-browser-generated.c  bamf-gdbus-browser-generated.h  bamf-gdbus-generated.c  bamf-gdbus-generated.h  bamf-gdbus-indicator-source-generated.c  bamf-gdbus-indicator-source-generated.h  bamf-gdbus-view-generated.c  bamf-gdbus-view-generated.h  bamf-indicator-glue.h  bamf-indicator-glue.xml  bamf-indicator-source-glue.h  bamf-indicator-source-glue.xml  bamf-indicator-source.c  bamf-indicator-source.h  bamf-indicator.c  bamf-indicator.h  bamf-legacy-screen-private.h  bamf-legacy-screen.c  bamf-legacy-screen.h  bamf-legacy-window-test.c  bamf-legacy-window-test.h  bamf-legacy-window.c  bamf-legacy-window.h  bamf-marshal.c  bamf-marshal.h  bamf-marshal.list  bamf-matcher-glue.h  bamf-matcher-glue.xml  (+45 more)
tests/: Makefile.am  Makefile.am.gtests  alt-tabber.c  desktop-file-launcher.c  gtester.xsl  gtester2xunit.py  run-xvfb.sh
tests/bamfdaemon/: Makefile.am  Makefile.in  run-xvfb.sh  test-application.c  test-bamf.c  test-matcher.c  test-mock-window.c  test-mock-window.h  test-view.c  test-window.c
tests/bamfdaemon/data/: test-bamf-app.desktop
tests/data/: icon.desktop
tests/functional/: Makefile.am  Makefile.in  alt-tabber.c  desktop-file-launcher.c  interaction-tester.c  tab-source-test.c
tests/libbamf/: Makefile.am  Makefile.in  test-application.c  test-libbamf.c  test-matcher.c
tests/unit/: Makefile.am  test-application.c  test-bamf.c  test-matcher.c  test-view.c
